force-app/main/default/objects/Contact/fields/Contact_budget__c.field-meta.xml
<CustomField>
    <fullName>Contact_budget__c</fullName>
    <label>Contact_budget_value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>