force-app/main/default/objects/Contact/fields/Contact_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Contact_Wallet__c</fullName>
    <label>Contact_Wallet</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>