force-app/main/default/objects/Contact/fields/SumValues__c.field-meta.xml
<CustomField>
    <fullName>SumValues__c</fullName>
    <label>SumValue</label>
    <summarizedField>Car__c.Value__c</summarizedField>
    <summaryForeignKey>Car__c.Contacts__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>